fixed date display wrapping for printer
* added missing only screen for or logic

--- a/style.less
+++ b/style.less
@@ -244,7 +244,7 @@ body {
     color: gray;
 }
 
-@media only screen and (max-width: 60rem), (-webkit-min-device-pixel-ratio: 2)
+@media only screen and (max-width: 60rem), only screen and (-webkit-min-device-pixel-ratio: 2)
 {
     .jobsubtitle
     {
@@ -255,7 +255,7 @@ body {
 
     }
 }
-@media only screen and (min-width: 60rem), (-webkit-min-device-pixel-ratio: 2)
+@media only screen and (min-width: 60rem), only screen and (-webkit-min-device-pixel-ratio: 2)
 {
     .jobsubtitle::before {
         content: "| ";
